# books

./: .gitignore  README.md  build.sh  buildspec.yml  clean.sh
sphinx/scikit-intro/: Makefile  README.md  autobuild.sh  pyproject.toml
sphinx/scikit-intro/scripts/: modernize_notebooks.py
sphinx/scikit-intro/source/: .gitignore  _model_transform.ipynb  _runtime.py  autoviz.ipynb  classification.ipynb  clustering.ipynb  combo.ipynb  conf.py  customized-estimators.ipynb  dask.ipynb  dimension-reduction.ipynb  feature-extraction.ipynb  feature-selection.ipynb  generate-samples.ipynb  gensim.ipynb  hyperparam-tuning.ipynb  imbalanced-learn.ipynb  imputation.ipynb  index.rst  linear-regression.ipynb  logistic-regression.ipynb  nearest-neighbors.ipynb  nltk.ipynb  optuna.ipynb  pairwise-metrics.ipynb  pandas-dataframe.ipynb  pandas.ipynb  patsy.ipynb  pipelines.ipynb  plot-animation.ipynb  plot-area.ipynb  plot-bar.ipynb  plot-box.ipynb  plot-dist.ipynb  plot-graph.ipynb  plot-heatmap.ipynb  plot-line.ipynb  plot-mosaic.ipynb  plot-parallel-coordinates.ipynb  plot-pie.ipynb  (+17 more)
sphinx/scratch/: README.md  autobuild.bat  list-images.py  pyproject.toml
sphinx/scratch/media/: jumping-over-egg.tscproj  jumping-over-eggs.tscproj  scratch-2.1-motion-basic-moving.trec  scratch-2.10-motion-bouncing.trec  scratch-2.2-motion-basic-rotation.trec  scratch-2.3-motion-moving-to-a-random-position.trec  scratch-2.5-motion-moving-to-a-specific-x-and-y-coordinate.trec  scratch-2.7-motion-pointing.trec  scratch-2.8-motion-changing-x.trec  scratch-2.9-motion-changing-y.trec  scratch-3.1-looks-saying-something.trec  scratch-3.2-looks-thinking-something.trec  scratch-3.3-looks-changing-costume.trec  scratch-3.4-looks-changing-backdrop.trec  scratch-3.5-looks-changing-size.trec  scratch-3.6-looks-changing-color.trec  scratch-3.7-looks-showing-and-hiding.trec  scratch-3.8-looks-layers.trec  scratch-4.1-sound-playing-sound.trec  scratch-4.2-sound-changing-pitch-and-pan-effects.trec  scratch-4.3-sound-changing-volume.trec  scratch-5.3-when-sprite-is-clicked.trec  scratch-5.4-events-when-backdrop-switches.trec  scratch-5.5-events-when-loudness-exceeds.trec  scratch.tscproj  (+13 more)
(+1661 files in other folders)
