[project]
name = "scikit-intro"
version = "0.1.0"
description = "Sphinx source for the scikit-intro book."
requires-python = ">=3.13,<3.14"
dependencies = [
    "jupyter-sphinx>=0.5.3",
    "nbsphinx>=0.9.7",
    "sphinx>=8.2,<9",
    "sphinx-rtd-theme>=3.0.2,<4",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-sitemap>=2.6.0",
    "sphinxcontrib-bibtex>=2.6.5",
    "sphinxcontrib-plantuml>=0.30",
]

[dependency-groups]
notebook = [
    "combo>=0.1.3",
    "dask[complete]>=2026.3.0",
    "dask-ml>=2025.1.0",
    "gensim>=4.4.0",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.6",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "mlflow>=3.11.1",
    "nbclient>=0.10.4",
    "nbconvert>=7.17.1",
    "nltk>=3.9.4",
    "networkx>=3.5",
    "numba>=0.65.0",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "patsy>=1.0.2",
    "pot>=0.9.6",
    "pygam>=0.9.1",
    "rpy2>=3.6.7",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "squarify>=0.4.4",
    "statsmodels>=0.14.6",
    "tune-sklearn>=0.5.0",
    "xgboost>=3.0.5",
    "yellowbrick>=1.5",
]
dev = [
    "codespell>=2.4.1",
    "ruff>=0.11.8",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.codespell]
skip = "*.png,*.ico,build,_build,.venv"
